# grandi

./: .env.example  .gitignore  .gitmodules  .pre-commit-config.yaml  Makefile  README.md  deploy.sh  pyproject.toml  submission.md
.github/workflows/: fine-tune.yaml  pre-train.yaml  pretrain.yaml
api/: main.py  model.py  requirements.txt
app/: Dockerfile  model.py
ml/: bq_schema.txt  data_prep.py  fine_tune.py  monitoring_query.sql  pretrain.ipynb  pretrain.py  shards.py
scripts/: deploy_cloudrun.sh  download_stockfish.sh
tests/: test_data_prep.py  test_e2e.py  test_game_engine.py  test_game_logic.py
training/: pretrain.py
