[project]
name = "grandi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.11.*"

dependencies = [
    "ruff>=0.12.2",
    "pre-commit>=4.3.0",
]

[dependency-groups]
dev = ["ipykernel>=6.30.1"]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "F",  # pyflakes
    "ANN001",   # missing type annotation for function argument
    "ANN201",   # missing return type annotation for public function
    "I001",     # isort
]

[tool.ruff]
exclude = ["*.ipynb"]
line-length = 120

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
