[project]
name = "grandi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.11.*"

dependencies = [
    "ruff>=0.12.2",
    "pre-commit>=4.3.0",
    "torch>=2.9.1",
    "numpy>=2.3.5",
    "fastapi>=0.124.4",
    "uvicorn>=0.38.0",
    "google-cloud-storage>=3.7.0",
    "python-dotenv>=1.2.1",
    "google-cloud-bigquery>=3.39.0",
    "gradio>=6.1.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
    "pytest>=8.0.0",
    "httpx>=0.27.0"
]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "F",  # pyflakes
    "ANN001",   # missing type annotation for function argument
    "ANN201",   # missing return type annotation for public function
    "I001",     # isort
]

[tool.ruff]
exclude = ["*.ipynb"]
line-length = 120

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
